# cmake_test

./: CMakeLists.txt
bmp2c/: CMakeLists.txt
bmp2c/src/: main.cpp
renderlib/: CMakeLists.txt
renderlib/inc/: render.h
renderlib/src/: render.cpp
simplemathlib/: CMakeLists.txt
simplemathlib/inc/: smath.h  smath_neo.h  smath_struct.h
simplemathlib/src/: smath.cpp
smatrixlib/: CMakeLists.txt
smatrixlib/inc/: .smatrix.h.swp  smatrix.h
smatrixlib/src/: smatrix.cpp
tcimg/: CMakeLists.txt  tcimg.c  tcimg.h
test2/: CMakeLists.txt
test2/inc/: main.h
test2/src/: main.cpp
testlib/: CMakeLists.txt
testlib/inc/: testapi.h
testlib/src/: main.cpp
wavefront/: CMakeLists.txt
wavefront/inc/: objModel.h
wavefront/src/: objModel.c
winlib/: CMakeLists.txt
winlib/inc/: layer.h  sdlwinapi.h  winapi.h  winapi.h.bak
winlib/src/: Layer.cpp  Layer.cpp.bak  SDLWindow.cpp  SDLWindow.cpp.bak  Window.cpp
